fix css error & contrast

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -258,7 +258,7 @@ a.caption {
     transition: transform 0.2s ease;
 }
 
-a.caption::hover {
+a.caption:hover {
     transform: scale(1.1);
 }
 
@@ -342,7 +342,7 @@ footer .copyright {
 
 .errors h1 {
     font-size: 2.2rem;
-    color: #f97316;
+    color: #933e01;
     font-weight: 700;
 }
 
